--- a/styles.css
+++ b/styles.css
@@ -74,8 +74,8 @@ footer {
 }
 
 img {
-  width: 1370px;
-  height: 300px;
+  width: 100%;
+  height: auto;
   border: 1px solid #ccc;
   opacity: 1;
   transition: opacity 0.5s ease-in-out;
